Update JavaFX_project.md
Edited the file. Final version.